[Cocoa] REGRESSION(r281291): Text Style fonts don't have the correct weight set https://bugs.webkit.org/show_bug.cgi?id=233070

Reviewed by Cameron McCormack.

Source/WebCore:

Text style fonts (like font: -apple-system-body) weren't having their weights detected correctly. When the
bold-fonts accessibility setting is enabled, our detection logic was indicating that the fonts weren't
bold when they actually were. This patch fixes the detection logic to use kCTFontCSSWeightAttribute
instead.

Test: platform/ios/ios/fast/text/opticalFontWithWeight.html

* rendering/RenderThemeCocoa.mm:
(WebCore::cssWeightOfSystemFont):

LayoutTests:

* platform/ios-14/platform/ios/ios/fast/text/opticalFontWithWeight-expected.txt:
* platform/ios/ios/fast/text/opticalFontWithWeight-expected.txt:
* platform/ios/platform/ios/ios/fast/text/opticalFontWithWeight-expected.txt:


Canonical link: https://commits.webkit.org/244617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286254 268f45cc-cd09-0410-ab3c-d52691b4dbfc