Source/WebCore/rendering/RenderThemeCocoa.mm
@@ -284,10 +284,14 @@ FontCascadeDescription& RenderThemeCocoa::cachedSystemFontDescription(CSSValueID
 
 static inline FontSelectionValue cssWeightOfSystemFont(CTFontRef font)
 {
-    auto traits = adoptCF(CTFontCopyTraits(font));
-    CFNumberRef resultRef = (CFNumberRef)CFDictionaryGetValue(traits.get(), kCTFontWeightTrait);
+    auto resultRef = adoptCF(static_cast<CFNumberRef>(CTFontCopyAttribute(font, kCTFontCSSWeightAttribute)));
     float result = 0;
-    CFNumberGetValue(resultRef, kCFNumberFloatType, &result);
+    if (resultRef && CFNumberGetValue(resultRef.get(), kCFNumberFloatType, &result))
+        return FontSelectionValue(result);
+
+    auto traits = adoptCF(CTFontCopyTraits(font));
+    resultRef = static_cast<CFNumberRef>(CFDictionaryGetValue(traits.get(), kCTFontWeightTrait));
+    CFNumberGetValue(resultRef.get(), kCFNumberFloatType, &result);
     // These numbers were experimentally gathered from weights of the system font.
     static constexpr float weightThresholds[] = { -0.6, -0.365, -0.115, 0.130, 0.235, 0.350, 0.5, 0.7 };
     for (unsigned i = 0; i < WTF_ARRAY_LENGTH(weightThresholds); ++i) {
